2020-08-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa-gpgme-widgets.c
	(create_key_label_with_warn): the warning icon is (now?)
	"dialog-warning", not "gtk-dialog-warning".

2020-08-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: scroll to row in another idle handler

	* src/balsa-index.c
	  (bndx_scroll_to_row_idle): the handler;
	  (bndx_scroll_to_row): helper to schedule it;
	  (bndx_scroll_on_open_idle), (bndx_select_row), (bndx_ensure_visible_idle):
	    use the helper;
	  (bndx_destroy): remove the source, if necessary.

2020-08-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Ensure visible in a low-priority idle callback

	* src/balsa-index.c (bndx_ensure_visible_idle): the callback;
	(balsa_index_ensure_visible): schedule it.

2020-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some more mailbox-opening issues

	* libbalsa/mailbox.c (libbalsa_mailbox_get_has_sort_pending):
	  new function;
	* libbalsa/mailbox.h: declare it;
	* src/balsa-index.c (bndx_scroll_on_open_idle): use it;
	* src/main-window.c (bw_real_open_mbnode_idle_cb): show the
	  BalsaIndex widget here, instead of in the scroll-on-open idle
	  handler
	(balsa_window_next_unread): balsa_index_select_next_unread()
	  finds the next unread message even if it is hidden.

2020-08-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Restore text copy

	Edit:Copy has been broken for a while, because
	BalsaMimeWidgetText is now a container, not the actual text
	widget.

	* src/balsa-message.c (balsa_message_can_select): Check the
	mime-widget's text-widget, not the mime-widget itself.

2020-07-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Drop libbalsa_{radio,toggle}_activated

	https://developer.gnome.org/gio/stable/GActionMap.html#GActionEntry:
	Since GLib 2.40, [activate] can be NULL for stateful actions,
	in which case the default handler is used. For boolean-stated